2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h: Remove use of UUID, use strings instead.
	* include/mageec/Framework.h: Likewise.
	* include/mageec/ML.h: Likewise.
	* include/mageec/ML/C5.h: Likewise.
	* include/mageec/TrainedML.h: Likewise.
	* include/mageec/Util.h: Likewise.
	* lib/Database.cpp: Likewise.
	* lib/Driver.cpp: Likewise.
	* lib/Framework.cpp: Likewise.
	* lib/ML/C5.cpp: Likewise.
	* lib/TrainedML.cpp: Likewise.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5.cpp: Correctly read the prediction from C5.0

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5.cpp: Place a comma after all cases in the .cases file.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Add Types.cpp to build.
	* lib/Types.cpp: Added file.
	* lib/Util.cpp: Update to advance iterators when reading bytes.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5.cpp: Make decisions using the C5 library.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Link against the C5 library. Always build C5.0
	* lib/ML/C5.cpp: Refactor to use C5 library.
	* lib/ML/C5/c50.c: Update to build against MAGEEC.
	* lib/ML/C5/redefine.c: Likewise.
	* lib/ML/C5/rsample.c: Likewise.
	* lib/ML/C5/rulebasedmodels.c: Likewise.
	* lib/ML/C5/transform.h: Likewise.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5/CMakeLists.txt: Update to reflect renaming of files.
	* lib/ML/C5/top.c: Rename to c50.c, remove R dependencies.
	* lib/ML/C5/rc50.c: Rename to c50main.c, remove R depedencies.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5/CMakeLists.txt: Updated to reflect new C5.0 source files.
	* lib/ML/C5/Makevars.in: Added file.
	* lib/ML/C5/attwinnow.c: Updated to new C5.0 implementation.
	* lib/ML/C5/classify.c: Likewise.
	* lib/ML/C5/confmat.c: Likewise.
	* lib/ML/C5/construct.c: Likewise.
	* lib/ML/C5/contin.c: Likewise.
	* lib/ML/C5/defns.i: Renamed to defns.h.